:frame_with_picture: Add images about me

--- a/about.html
+++ b/about.html
@@ -102,23 +102,6 @@
 
         </div>
     </div>
-    
-
-    <div class="container">
-        <div class="header-page ef-parallax-bg" style="background-image:url(img/about-header.jpg)">
-            <div class="col-md-6 col-md-offset-6">
-                <div class="row">
-                    <div class="inner-content">
-                        <div class="header-content">
-                            <h1>About</h1>
-                            <hr>
-                            <p>My bio, skills, interests and so on.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div class="container margin-top">
         <div class="main-title near-content">
@@ -145,7 +128,8 @@
     <div class="container margin-top">
         <div class="row">
             <div class="col-md-12">
-                <div class="our-story wow fadeInUp" style="background: url(img/our-story.jpg) no-repeat" data-wow-duration="0.5s" data-wow-delay="0.2s">
+                <div 
+                class="our-story wow fadeInUp" style="background: url(img/my_bio.jpg) no-repeat" data-wow-duration="0.5s" data-wow-delay="0.2s">
                     <div class="col-md-6 col-md-offset-6">
                         <div class="our-story-content wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                             <div class="our-story-content-inner">
