--- a/index.html
+++ b/index.html
@@ -362,9 +362,7 @@
             <div class="col-md-5 col-md-offset-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                 <div class="row">
                     <div id="history-images" class="owl-carousel">
-                        <div><img class="img-responsive center-block" src="img/about_img.jpg" alt="About"></div>
-                        <div><img class="img-responsive center-block" src="img/about_img2.jpg" alt="About"></div>
-                        <div><img class="img-responsive center-block" src="img/about_img3.jpg" alt="About"></div>
+                        <div><img class="img-responsive center-block" src="img/about_img.png" alt="About"></div>
                     </div>
                 </div>
             </div>
