--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <!-- Item 8 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_2.jpg" alt="Portfolio Item">
+                            <img src="img/project/02/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Jerry's Logo</span>
@@ -271,7 +271,7 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_02.html"></a>
                             </div>
                         </div>
                     </div>
