--- a/project_02.html
+++ b/project_02.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aster Link Project | Yuria's Portfolio</title>
+    <title>Jerry's Logo | Yuria's Portfolio</title>
     <meta name="description" content="">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -107,7 +107,7 @@
     <div class="container">
         <div 
             class="header-page ef-parallax-bg" 
-            style="background-image:url(img/project/01/img_header.jpg)">
+            style="background-image:url(img/project/02/img_header.jpg)">
         </div>
     </div>
 
@@ -116,9 +116,9 @@
         <div class="single-portfolio-wrapper">
             <div class="row">
                 <div class="col-md-8 col-sm-8">
-                    <h1>Aster Link Project</h1>
+                    <h1>Jerry's Logo</h1>
                     <span class="info">Branding: Logo Design</span>
-                    <p>One of my programmer friends and I founded a team called "Aster Link Project”. I took charge of its branding design, such as the visual identity and the logo. The team name is the combination of "Aster", we see the new technologies on the Web as stars, and "Link", which comes from our desire that we want to explore and combine the new technologies to make something as our activities are based on the concept that challenging new technologies.</p>
+                    <p>This logo is for my classmate Jerry who likes skiing and is often said that he reminds people of a penguin. So I got those together with his favorite color green and purple.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -126,7 +126,7 @@
                             <tbody>
                                 <tr>
                                     <td>Visit:</td>
-                                    <td><a href="http://www.asterlinkproject.com/" target="_blank">Github</a></td>
+                                    <td><a href="#" target="_blank"></a></td>
                                 </tr>
                                 <tr>
                                     <td>Category:</td>
@@ -134,7 +134,7 @@
                                 </tr>
                                 <tr>
                                     <td>Date:</td>
-                                    <td>Dec 2015</td>
+                                    <td>Jan 2017</td>
                                 </tr>
                                 <tr>
                                     <td>Share:</td>
@@ -156,33 +156,28 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/01/img_1a.jpg" alt="logo1">
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                    <div class="single-project-images">
-                        <img src="img/project/01/img_1b.jpg" alt="logo2">
+                        <img src="img/project/02/img_2.jpg" alt="product1">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/01/img_2.jpg" alt="product1">
+                        <img src="img/project/02/img_3.jpg" alt="product1">
                     </div>
                 </div>
-                <div class="col-md-12">
-                        <div class="single-project-images">
-                            <img src="img/project/01/img_3.jpg" alt="product2">
-                        </div>
-                    </div>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="portfolio-controls">
+            <div class="btn-project forward-btn">
+                <a href="project_01.html" data-hover="Next">
+                    <i class="pe-7s-angle-right right"></i>
+                </a>
+            </div>
             <div class="btn-project back-btn">
-                <a href="project_02.html" data-hover="Previous">
+                <a href="project_03.html" data-hover="Previous">
                     <i class="pe-7s-angle-left left"></i>
                 </a>
             </div>
