:file_folder: Add project_03

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <!-- Item 7 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_3.jpg" alt="Portfolio Item">
+                            <img src="img/project/03/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Poutine Talk</span>
@@ -256,7 +256,7 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_03.html"></a>
                             </div>
                         </div>
                     </div>
