--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
             <div class="js-masonry">
                 <div class="row" id="work-grid">
                     <!-- Begin of Thumbs Portfolio -->
-                    <!-- Item 1 -->
+                    <!-- Item 09 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_9.jpg" alt="Portfolio Item">
+                            <img src="iimg/project/09/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Oh Designie</span>
@@ -166,14 +166,14 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_09.html"></a>
                             </div>
                         </div>
                     </div>
-                    <!-- Item 2 -->
+                    <!-- Item 08 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_8.jpg" alt="Portfolio Item">
+                            <img src="img/project/08/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Perfect Morning</span>
@@ -181,14 +181,14 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_08.html"></a>
                             </div>
                         </div>
                     </div>
-                    <!-- Item 3 -->
+                    <!-- Item 07 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_7.jpg" alt="Portfolio Item">
+                            <img src="img/project/07/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Wordbook to share</span>
@@ -196,14 +196,14 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_07.html"></a>
                             </div>
                         </div>
                     </div>
-                    <!-- Item 4 -->
+                    <!-- Item 06 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_6.jpg" alt="Portfolio Item">
+                            <img src="img/project/06/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">CAVANCLE</span>
@@ -211,14 +211,14 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_06.html"></a>
                             </div>
                         </div>
                     </div>
-                    <!-- Item 5 -->
+                    <!-- Item 05 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_5.jpg" alt="Portfolio Item">
+                            <img src="img/project/05/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Aigle Logo</span>
@@ -226,14 +226,14 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_05.html"></a>
                             </div>
                         </div>
                     </div>
                     <!-- Item 6 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_4.jpg" alt="Portfolio Item">
+                            <img src="iimg/project/04/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Yuria's Portfolio 2017</span>
@@ -241,7 +241,7 @@
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
+                                <a class="main-portfolio-link" href="project_04.html"></a>
                             </div>
                         </div>
                     </div>
