--- a/project_08.html
+++ b/project_08.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aster Link Project | Yuria's Portfolio</title>
+    <title>Perfect Morning | Yuria's Portfolio</title>
     <meta name="description" content="">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -107,7 +107,7 @@
     <div class="container">
         <div 
             class="header-page ef-parallax-bg" 
-            style="background-image:url(img/project/01/img_header.jpg)">
+            style="background-image:url(img/project/08/img_header.jpg)">
         </div>
     </div>
 
@@ -116,9 +116,9 @@
         <div class="single-portfolio-wrapper">
             <div class="row">
                 <div class="col-md-8 col-sm-8">
-                    <h1>Aster Link Project</h1>
-                    <span class="info">Branding: Logo Design</span>
-                    <p>One of my programmer friends and I founded a team called "Aster Link Project”. I took charge of its branding design, such as the visual identity and the logo. The team name is the combination of "Aster", we see the new technologies on the Web as stars, and "Link", which comes from our desire that we want to explore and combine the new technologies to make something as our activities are based on the concept that challenging new technologies.</p>
+                    <h1>Perfect Morning</h1>
+                    <span class="info">iOS App: Development, UI Design, UX Design, Logo Design</span>
+                    <p>I learned a lot of things from implementing this App.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -126,15 +126,15 @@
                             <tbody>
                                 <tr>
                                     <td>Visit:</td>
-                                    <td><a href="http://www.asterlinkproject.com/" target="_blank">Github</a></td>
+                                    <td><a href="https://github.com/PerfectMorning/PerfectMorning" target="_blank">Github</a></td>
                                 </tr>
                                 <tr>
                                     <td>Category:</td>
-                                    <td>Branding</td>
+                                    <td>iOS App</td>
                                 </tr>
                                 <tr>
                                     <td>Date:</td>
-                                    <td>Dec 2015</td>
+                                    <td>Oct 2017</td>
                                 </tr>
                                 <tr>
                                     <td>Share:</td>
@@ -156,24 +156,14 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/01/img_1a.jpg" alt="logo1">
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                    <div class="single-project-images">
-                        <img src="img/project/01/img_1b.jpg" alt="logo2">
+                        <img src="img/project/08/img_2.jpg" alt="product1">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/01/img_2.jpg" alt="product1">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="single-project-images">
-                        <img src="img/project/01/img_3.jpg" alt="product2">
+                        <img src="img/project/08/img_3.jpg" alt="product2">
                     </div>
                 </div>
             </div>
@@ -181,8 +171,13 @@
     </div>
     <div class="container">
         <div class="portfolio-controls">
+            <div class="btn-project forward-btn">
+                <a href="project_07.html" data-hover="Next">
+                    <i class="pe-7s-angle-right right"></i>
+                </a>
+            </div>
             <div class="btn-project back-btn">
-                <a href="project_02.html" data-hover="Previous">
+                <a href="project_09.html" data-hover="Previous">
                     <i class="pe-7s-angle-left left"></i>
                 </a>
             </div>
