:bug: Tweak typo

--- a/about.html
+++ b/about.html
@@ -111,15 +111,12 @@
         <div class="row">
             <div class="col-md-12">
                 <p style="font-size: 18px; line-height: 26px;">
-                    I’m a frontend developer familiar with UI/UX.
+                    I’m a Frontend Developer familiar with UI/UX.
                 </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
                 <p>
-                    Please call me <strong>Julia</strong>, 
-                    if it is easy to remember for you :)
+                    Please call me <strong>Julia</strong>,if it's easy to remember for you :)
+                    <br/>
+                    Get in touch with me on SNS or via Email at <strong>nishimura.yuria@gmail.com</strong>!
                 </p>
             </div>
         </div>
