--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="cd-headline clip">
                         <span class="cd-words-wrapper">
                             <b class="is-visible">FRONTEND DEVELOPMENT</b>
-                            <b>UI/UX Design</b>
+                            <b>UI/UX DESIGN</b>
                             <b>CREATIVE SOLUTIONS</b>
                         </span>
                     </div>
@@ -158,7 +158,7 @@
                     <!-- Item 09 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
                         <div class="img home-portfolio-image">
-                            <img src="iimg/project/09/img_thumb.jpg" alt="Portfolio Item">
+                            <img src="img/project/09/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Oh Designie</span>
@@ -233,7 +233,7 @@
                     <!-- Item 6 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="iimg/project/04/img_thumb.jpg" alt="Portfolio Item">
+                            <img src="img/project/04/img_thumb.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Yuria's Portfolio 2017</span>
