:fireworks: Apply images

--- a/project_04.html
+++ b/project_04.html
@@ -161,6 +161,11 @@
                         <img src="img/project/04/img_2.jpg" alt="product1">
                     </div>
                 </div>
+                <div class="col-md-12">
+                    <div class="single-project-images">
+                        <img src="img/project/04/img_3.jpg" alt="product2">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
