--- a/project_06.html
+++ b/project_06.html
@@ -176,6 +176,11 @@
                         <img src="img/project/06/img_3.jpg" alt="product2">
                     </div>
                 </div>
+                <div class="col-md-12">
+                    <div class="single-project-images">
+                        <img src="img/project/06/img_4.gif" alt="product3">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
