--- a/project_07.html
+++ b/project_07.html
@@ -156,16 +156,6 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
-                <div class="col-md-6 col-sm-6">
-                    <div class="single-project-images">
-                        <img src="img/project/07/img_1a.jpg" alt="logo1">
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                    <div class="single-project-images">
-                        <img src="img/project/07/img_1b.jpg" alt="logo2">
-                    </div>
-                </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/07/img_2.jpg" alt="product1">
@@ -174,6 +164,11 @@
                 <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/07/img_3.jpg" alt="product2">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="single-project-images">
+                        <img src="img/project/07/img_4.jpg" alt="product3">
                     </div>
                 </div>
             </div>
