:sparkles: Correct typo

--- a/project_07.html
+++ b/project_07.html
@@ -128,7 +128,13 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Wordbook to share</h1>
                     <span class="info">iOS App: UI Design, UX Design, Logo Design</span>
-                    <p>My roll in this project is mainly making visual designs.</p>
+                    <p>
+                        Joined one of my friend making an iOS App, 
+                        I started from researching competitive Apps to know their apps’ pros 
+                        and cons then defined our targets and concept. 
+                        This time I was responsible for not only UX and UI parts 
+                        but also the discussion to implement user-friendly motions and how to monetize this app.
+                    </p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
