--- a/project_09.html
+++ b/project_09.html
@@ -128,7 +128,10 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Oh Designie</h1>
                     <span class="info">Hybrid App: Development, UI Design, UX Design, Logo Design</span>
-                    <p>My largest personal project taught me how to work on a project.</p>
+                    <p>
+                        My largest personal project taught me how to work on through a project. 
+                        While we are a small team, we introduced agile development and made each goal every week.
+                    </p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
