--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <h1>ABOUT</h1>
                         <hr>
                         <h4>Hi, I'm Yuria Nishimura.<br/>
-                            A Frontend Developer familier with UI/UX.
+                            A Frontend Developer familiar with UI/UX.
                         </h4>
                         <p>
                             My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.
