:sparkles: Tweak Typo

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <div class="overlay-thumb">
                                 <div class="details">
                                     <span class="title">Oh Designie</span>
-                                    <span class="info">Andriod/iOS App</span>
+                                    <span class="info">Hybrid App</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
