:camera: Update Oh Designie images and description

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                         <hr>
                     </div>
                     <h4>Web Development</h4>
-                    <p>Mainly writing views of software, HTML5, Sass and Javascript with Atom or VS Code is my part of work. But… I’m preparing to be a vimmer!</p>
+                    <p>Mainly writing TypeScript for React or React Native with VS Code. I love making beautiful responsible components using flex!</p>
                     <br/>
                 </div>
                 <!-- Item 2 -->
@@ -190,7 +190,7 @@
                         <hr>
                     </div>
                     <h4>Perspectives</h4>
-                    <p>Since I’m curious, When exploring new tools I think its merits and how I would improve the product, which gives me ideas to solve problems.</p>
+                    <p>Since I’m curious, I like exploring new tools and finding its merits and how I would improve the product. This process gives me ideas to solve problems.</p>
                     <br/>
                 </div>
             </div>
