--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         <hr>
                     </div>
                     <h4>Web Development</h4>
-                    <p>Mainly writing views of softwares, HTML5, Sass and Javascript with Atom or VS Code is my part of work. But… I’m preparing to be a vimmer!</p>
+                    <p>Mainly writing TypeScript for React or React Native with VS Code. I love making beautiful responsible components using flex!</p>
                     <br/>
                 </div>
                 <!-- Item 2 -->
@@ -338,11 +338,11 @@
                 <!-- Item 3 -->
                 <div class="col-md-4">
                     <div class="services-icon">
-                        <span class="pe-7s-coffee"></span>
+                        <span class="pe-7s-look"></span>
                         <hr>
                     </div>
-                    <h4>Tea & Sweets</h4>
-                    <p>Having tea always helps me concentrating on work. I’m into coconuts milk babble tea now! Collecting tea and baking sweets make me fun as well.</p>
+                    <h4>Perspectives</h4>
+                    <p>Since I’m curious, I like exploring new tools and finding its merits and how I would improve the product. This process gives me ideas to solve problems.</p>
                     <br/>
                 </div>
             </div>
