:pencil2: Update text

--- a/project_08.html
+++ b/project_08.html
@@ -124,10 +124,10 @@
     <div class="container">
         <div class="single-portfolio-wrapper">
             <div class="row">
-                <div class="col-md-8 col-sm-8">
+                <div class="col-md-8 col-sm-8 single-project-images">
                     <h1>Perfect Morning</h1>
                     <span class="info">iOS App: Development, UI Design, UX Design, Logo Design</span>
-                    <p>I learned a lot of things from implementing this App.</p>
+                    <p>This is an iOS app to search breakfast recipes visually like Instagram. The target ages are mainly around twenties to thirties single women who are working on weekdays and don't have any idea what to eat for breakfast such busy mornings. There are 4 category buttons on the home screen and users can choose one of them to start exploring recipes. The 'Quick' recipes takes up to 10 minutes to prepare, 'Arrange' does 10-30 minutes, 'Slow' does 30-60 minutes, 'Elegant' does over 60 minutes.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Logo design</span>
+                    <p>The combination of sunrise and a sunny-side fried egg.</p>
+                </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="single-project-images">
                         <img src="img/project/08/img_1a.jpg" alt="logo1">
@@ -176,8 +180,10 @@
                     </div>
                 </div>
                 <div class="col-md-12">
+                    <span class="info">UI design</span>
+                    <p>Large images make users decide a recipe easily by feeling.</p>
                     <div class="single-project-images">
-                        <img src="img/project/08/img_2.jpg" alt="product1">
+                        <img src="img/project/08/img_2.jpg" alt="ui design">
                     </div>
                 </div>
             </div>
