:paintbrush: Update menu background color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <span class="line"></span>
             </button>
 
-            <div class="menu-wrap" style="background-image: url(img/nav_bg.jpg)">
+            <div class="menu-wrap">
                 <div class="menu-content">
                     <div class="navigation">
                         <span class="pe-7s-close close-menu" id="close-button"></span>
