:basketball: Update dribbble link

--- a/project_06.html
+++ b/project_06.html
@@ -97,7 +97,7 @@
                         <div class="menu-social-media">
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
-                                <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                                <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
                                 <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
                                 <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
@@ -220,7 +220,7 @@
                         <div class="footer-content">
                         <ul class="social-media">
                             <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
-                            <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                            <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
                             <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
                             <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
