:pencil: Update text

--- a/project_02.html
+++ b/project_02.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Jerry's Logo</h1>
                     <span class="info">Branding: Logo Design</span>
-                    <p>This logo is for my classmate Jerry who likes skiing and is often said that he reminds people of a penguin. So I got those together with his favorite color green and purple.</p>
+                    <p>This logo is for my classmate Jerry who likes skiing. The logo idea came from that he is often said that he reminds people of a penguin. So I got those elements together with his favorite color, green and purple.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Logo Design</span>
+                    <p>A penguin skiing on a snow mountain.</p>
+                </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/02/img_2.jpg" alt="product1">
