--- a/project_03.html
+++ b/project_03.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Poutine Talk</h1>
                     <span class="info">Branding: Logo Design, UX Design, Direction</span>
-                    <p>"Poutine Talk" is our fictional mobile App on which Canadians who want to learn other countries' culture and international students who want to study English can make an appointment and meet in a cafe in Canada. The purpose of launching this App is for not only people who want culture exchanges but also for cafes and restaurants in Canada.</p>
+                    <p>'Poutine Talk' is a fictional mobile app. The target users are basically both Canadians who want to learn about other countries' culture, and international students who want to study English. By using our app, they can make an appointment and meet face to face in a cafe. The benefits of launching this app would be for not only people who want culture exchanges but also cafes and restaurants in Canada by issuing some coupons.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Logo Design</span>
+                    <p>Arranged poutine for the catchy logo.</p>
+                </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/03/img_2.jpg" alt="product1">
