--- a/project_04.html
+++ b/project_04.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Yuria's Portfolio 2017</h1>
                     <span class="info">Website: Web Design, Coding, Logo Design</span>
-                    <p>Designing from the scratch is really interesting and fun, but it takes time to code.</p>
+                    <p>Designing from the scratch is really interesting and fun, but it takes time to code. While making this portfolio website, I tried using CSS animations, Google fonts, and some new JavaScript libraries. I knew how to write efficient CSS considered rendering performance.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Website Design</span>
+                    <p>White background and black letters to keep the website simple.</p>
+                </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/04/img_2.jpg" alt="product1">
