--- a/project_05.html
+++ b/project_05.html
@@ -164,6 +164,10 @@
     </div>
     <div class="container">
         <div class="single-project-details">
+            <div class="col-md-12">
+                <span class="info">Logo Design</span>
+                <p>A readable logo composed of an async symbol and eagle.</p>
+            </div>
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="single-project-images">
