--- a/project_06.html
+++ b/project_06.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>CAVANCLE</h1>
                     <span class="info">Website: UI Design, UX Design, Logo Design, Planning</span>
-                    <p>My roll in this project is mainly making visual designs.</p>
+                    <p>My roll in this project is mainly making visual designs. This is a cafe searching website for Japanese living in Vancouver made with Vue.js. As soon as we discussed features, I made a UI prototype to confirm the direction using XD. We had a promising start. Also, I made 4 patterns of the logo design idea depended on target groups.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Logo Design</span>
+                    <p>The logo stands for CAVANCLE's 'ca.'</p>
+                </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="single-project-images">
                         <img src="img/project/06/img_1a.jpg" alt="logo1">
@@ -176,6 +180,10 @@
                     </div>
                 </div>
                 <div class="col-md-12">
+                    <span class="info">UI Design</span>
+                    <p>A casual style inspired by coffee.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/06/img_2.jpg" alt="product1">
                     </div>
@@ -184,6 +192,10 @@
                     <div class="single-project-images">
                         <img src="img/project/06/img_3.jpg" alt="product2">
                     </div>
+                </div>
+                <div class="col-md-12">
+                    <span class="info">Loading Icon Design</span>
+                    <p>A gif animation grinding coffee beans.</p>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
