--- a/project_07.html
+++ b/project_07.html
@@ -127,13 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Wordbook to share</h1>
                     <span class="info">iOS App: UI Design, UX Design, Logo Design</span>
-                    <p>
-                        Joined one of my friend making an iOS App, 
-                        I started from researching competitive Apps to know their apps’ pros 
-                        and cons then defined our targets and concept. 
-                        This time I was responsible for not only UX and UI parts 
-                        but also the discussion to implement user-friendly motions and how to monetize this app.
-                    </p>
+                    <p>I joined one of my friend making an iOS app that helps users make, memorize, and test vocabulary. I started by researching competitive apps to know their pros and cons then defined our targets and concept. This time I raised ideas to improve user interactions, UI animations, and monetization.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -172,9 +166,17 @@
         <div class="single-project-details">
             <div class="row">
                 <div class="col-md-12">
+                    <span class="info">Logo Design</span>
+                    <p>The logo is a word book shaped a share icon.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/07/img_2.jpg" alt="product1">
                     </div>
+                </div>
+                <div class="col-md-12">
+                    <span class="info">UI Design</span>
+                    <p>Colorful and exciting UI would make users continue studying.</p>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
