--- a/project_08.html
+++ b/project_08.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8 single-project-images">
                     <h1>Perfect Morning</h1>
                     <span class="info">iOS App: Development, UI Design, UX Design, Logo Design</span>
-                    <p>This is an iOS app to search breakfast recipes visually like Instagram. The target ages are mainly around twenties to thirties single women who are working on weekdays and don't have any idea what to eat for breakfast such busy mornings. There are 4 category buttons on the home screen and users can choose one of them to start exploring recipes. The 'Quick' recipes takes up to 10 minutes to prepare, 'Arrange' does 10-30 minutes, 'Slow' does 30-60 minutes, 'Elegant' does over 60 minutes.</p>
+                    <p>This is an iOS app to search breakfast recipes visually like Instagram. The target ages are mainly from the twenties to thirties who are single women working on weekdays and don't have any idea what to eat for breakfast such a busy morning. There are 4 categories on the home screen, and to start exploring recipes, the user can choose one of the categories based on time. The 'Quick' recipes take up to 10 minutes to prepare, 'Arrange' does 10-30 minutes, 'Slow' does 30-60 minutes, and 'Elegant' does over 60 minutes.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -181,7 +181,9 @@
                 </div>
                 <div class="col-md-12">
                     <span class="info">UI design</span>
-                    <p>Large images make users decide a recipe easily by feeling.</p>
+                    <p>Large images would make users decide a recipe easily by feeling.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/08/img_2.jpg" alt="ui design">
                     </div>
