--- a/project_09.html
+++ b/project_09.html
@@ -127,8 +127,9 @@
                 <div class="col-md-8 col-sm-8 single-project-images">
                     <h1>Oh Designie</h1>
                     <span class="info">Hybrid App: Development, UI Design, UX Design, Logo Design</span>
-                    <p>This is a mobile game app to learn design fundamentals. There are several 20-second mini games focused on color, typography or layout. User can practice each game alone, or can join an online 'Competition' to compete with an other player.</p>
-                    <p>My largest personal project taught me how to work on through a project. Before starting this project, I did not know about TypeScript, Redux, HOC nor props at all. I only knew that React Native is the way to implement both iOS and Android app at the same time by writing JavaScript. So I started from setting up Expo with JavaScript. Now I can say I know not only ES6, how props and states work, React lifecycle, but also how to define TypeScript types and how to use Redux!</p>
+                    <p>This is a mobile game app for learning design fundamentals having fun! There are several 20-second mini-games focused on color, typography or layout. The user can practice each game alone, or join an online 'Competition' to compete with another player.</p>
+                    <p>'Oh Designie' is a combination of 'about design' in Polish and 'rookie.' I hope this app will help people who are designers or interested in design.</p>
+                    <p>My largest personal project taught me how to work on through a project. Before starting this project, I did not know about TypeScript, Redux, HOC nor props at all. I only knew that React Native is the way to implement both iOS and Android app at the same time by writing JavaScript. So I started with setting up Expo with JavaScript. Now I can say I know ES6, how props and states work, and React lifecycle, but also how to define TypeScript types and how to use Redux!</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -168,28 +169,36 @@
             <div class="row">
                 <div class="col-md-12">
                     <span class="info">Logo Design</span>
-                    <p>The logo represents the set of a lot of games in Oh Designie.</p>
+                    <p>The logo represents a series of games in Oh Designie.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/09/img_2.jpg" alt="logo">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <span class="info">UI Design</span>
-                    <p>Since this is a game app, vitamine colors and pattern backgrounds are used to make it looks fun!</p>
+                    <p>Since a game app, vitamin colors and pattern backgrounds are used to make it looks fun!</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/09/img_3.jpg" alt="ui design">
                     </div>
                 </div>
                 <div class="col-md-12">
-                    <span class="info">Game icons</span>
-                    <p>These reduced-size game UI icons are used for game thumbnails. </p>
+                    <span class="info">Game Icon Design</span>
+                    <p>These deformed game UI icons are used for game thumbnails.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/09/img_4.jpg" alt="game icons">
                     </div>
                 </div>
                 <div class="col-md-12">
-                    <span class="info">User badges</span>
-                    <p>When users reach some certain levels, they can earn one of these badges.</p>
+                    <span class="info">User Badge Design</span>
+                    <p>When reaching some certain levels, users can earn one of these badges.</p>
+                </div>
+                <div class="col-md-12">
                     <div class="single-project-images">
                         <img src="img/project/09/img_5.jpg" alt="badges">
                     </div>
