--- a/project_01.html
+++ b/project_01.html
@@ -127,7 +127,7 @@
                 <div class="col-md-8 col-sm-8">
                     <h1>Aster Link Project</h1>
                     <span class="info">Branding: Logo Design</span>
-                    <p>One of my programmer friends and I founded a team called "Aster Link Project”. I took charge of its branding design, such as the visual identity and the logo. The team name is the combination of "Aster", we see the new technologies on the Web as stars, and "Link", which comes from our desire that we want to explore and combine the new technologies to make something as our activities are based on the concept that challenging new technologies.</p>
+                    <p>One of my programmer friends and I founded a team called 'Aster Link Project'. The concept is challenging new technologies. I was in charge of its branding design, such as the visual identity and the logo. The team name is the combination of 'Aster', we see the new technologies on the Web as if those are stars, and 'Link', which comes from our desire that we want to explore and combine the new technologies to make something fun or useful.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -165,6 +165,10 @@
     <div class="container">
         <div class="single-project-details">
             <div class="row">
+                <div class="col-md-12">
+                    <span class="info">Logo design</span>
+                    <p>The initials 'ALP' are hidden in the star.</p>
+                </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="single-project-images">
                         <img src="img/project/01/img_1a.jpg" alt="logo1">
@@ -179,6 +183,10 @@
                     <div class="single-project-images">
                         <img src="img/project/01/img_2.jpg" alt="product1">
                     </div>
+                </div>
+                <div class="col-md-12">
+                    <span class="info">Business Card Design</span>
+                    <p>Inspired by a mobile app screen.</p>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
